--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@next/font": "13.0.7",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
+    "react-switch": "^7.0.0",
+    "styled-components": "^5.3.6",
+    "typescript": "^4.9.4",
+    "yup": "^0.32.11"
   }
 }
